[gd_scene load_steps=5 format=2]

[ext_resource path="res://Asset/Resource/云朵/2.png" type="Texture" id=1]
[ext_resource path="res://Asset/Resource/云朵/1.png" type="Texture" id=2]
[ext_resource path="res://Asset/Resource/云朵/3.png" type="Texture" id=3]
[ext_resource path="res://Asset/Scripts/主场景.gd" type="Script" id=4]

[node name="主场景" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.647059, 0.941176, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 56, 102 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 140, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 219, 470 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 574, 192 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 658, 346 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 737, 560 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CoinTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
